--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,3 +11,27 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update && \
 
 RUN npm install -g pnpm
 RUN pnpm set store-dir /app/node_modules/.pnpm-store
+
+# Copy package files
+COPY package.json pnpm-lock.yaml ./
+
+# Install dependencies
+RUN pnpm install --frozen-lockfile
+
+# Copy application source code
+COPY . .
+
+# Generate Prisma client and TanStack Router
+RUN pnpm run postinstall
+
+# Build the application
+RUN pnpm run build
+
+# Expose the port the app runs on
+EXPOSE 3000
+
+# Use tini as entrypoint for proper signal handling
+ENTRYPOINT ["/usr/bin/tini", "--"]
+
+# Default command (can be overridden in docker-compose)
+CMD ["pnpm", "start"]
