--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-NODE_ENV=development
+NODE_ENV=production
 BASE_URL=http://localhost:3000
 BASE_URL_OTHER_PORT=http://localhost:5173
 ADMIN_PASSWORD=your_admin_password_here
