--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.23",
     "@headlessui/react": "^2.2.3",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.8.2",
@@ -26,8 +27,14 @@
     "@trpc/client": "^11.1.2",
     "@trpc/server": "^11.1.2",
     "@trpc/tanstack-react-query": "^11.1.2",
+    "ai": "^4.3.19",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.525.0",
     "minio": "^8.0.5",
+    "openai": "^5.10.2",
     "postcss": "^8.5.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -40,17 +47,13 @@
     "vite": "^6",
     "vite-plugin-node-polyfills": "^0.23.0",
     "zod": "^3.25.0",
-    "lucide-react": "^0.525.0",
-    "bcryptjs": "^3.0.2",
-    "@ai-sdk/openai": "^1.3.23",
-    "ai": "^4.3.19",
-    "jsonwebtoken": "^9.0.2",
-    "zustand": "^5.0.6",
-    "openai": "^5.10.2"
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.1",
     "@tanstack/eslint-plugin-router": "^1.115.0",
+    "@types/bcryptjs": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^22.5.4",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
@@ -63,9 +66,7 @@
     "prisma": "^6.5.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.31.1",
-    "vite-tsconfig-paths": "^5.1.4",
-    "@types/bcryptjs": "^3.0.0",
-    "@types/jsonwebtoken": "^9.0.10"
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "private": true,
   "type": "module"
