--- a/.env.example
+++ b/.env.example
@@ -5,5 +5,5 @@ BASE_URL_OTHER_PORT=http://localhost:5173
 ADMIN_PASSWORD=your_admin_password_here
 OPENAI_API_KEY=your_openai_api_key_here
 ASSISTANT_ID=asst_your_assistant_id_here
-ANAMNESIS_MODEL=gpt-4.1-nano
+ANAMNESIS_MODEL=gpt-4o
 JWT_SECRET=your_jwt_secret_here_make_it_long_and_random
