--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -12,6 +12,8 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_USER: postgres
       POSTGRES_DB: app
+    ports:
+      - "5432:5432"
     shm_size: 512MB
 
   minio:
