add base url to app.yaml

--- a/app.yaml
+++ b/app.yaml
@@ -20,9 +20,9 @@ services:
       - key: NODE_ENV
         value: production
       - key: BASE_URL
-        value: https://sokrates-ai-g8gj8.ondigitalocean.app
+        value: ${BASE_URL}
       - key: BASE_URL_OTHER_PORT
-        value: https://sokrates-ai-g8gj8.ondigitalocean.app
+        value: ${BASE_URL_OTHER_PORT}
       - key: ADMIN_PASSWORD
         value: ${ADMIN_PASSWORD}
       - key: OPENAI_API_KEY
