--- a/app.yaml
+++ b/app.yaml
@@ -12,7 +12,7 @@ services:
     instance_count: 1
     instance_size_slug: basic-xxs
     min_instance_count: 1
-    public_ports:
+    internal_ports:
       - 3000
     routes:
       - path: /
