--- a/app.yaml
+++ b/app.yaml
@@ -14,7 +14,7 @@ services:
     min_instance_count: 1
     internal_ports:
       - 3000
-    external_ports:
+    public_ports:
       - 5173
     routes:
       - path: /
