--- a/app.yaml
+++ b/app.yaml
@@ -6,17 +6,14 @@ services:
     github:
       repo: dnassehi/sokrates-ai
       branch: main
-    run_command: pnpm start --port 3000 --host 0.0.0.0
+    run_command: pnpm start --port ${PORT:-3000} --host 0.0.0.0
     build_command: pnpm run postinstall && pnpm run build
     environment_slug: node-js
     instance_count: 1
     instance_size_slug: basic-xxs
     min_instance_count: 1
-    public_ports:
-      - 443
-    internal_ports:
-      - 3000
-        routes:
+    http_port: 3000   # porten appen lytter på
+    routes:
       - path: /
     envs:
       - key: NODE_ENV
@@ -37,8 +34,8 @@ services:
         value: ${JWT_SECRET}
       - key: DATABASE_URL
         value: ${db.DATABASE_URL}
-      - key: PORT
-        value: "3000"
+      # - key: PORT
+      #   value: "3000"
       - key: HOST
         value: "0.0.0.0"
     health_check:
