--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ai-sdk/openai": "^1.3.23",
     "@headlessui/react": "^2.2.3",
     "@hookform/resolvers": "^5.1.1",
+    "@mistralai/mistralai": "^1.9.17",
     "@prisma/client": "^6.8.2",
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.66.0",
